Amends example_settings

--- a/data/example_settings.json
+++ b/data/example_settings.json
@@ -14,5 +14,6 @@
         "pgDatabase": "PS2JaegerAccountbot"
     },
     "google_service_account": "data/YOUR_SERVICE_ACCOUNT_KEY.json",
-    "owner_id": YOUR_USER_ID(DEVELOPER_MODE)
+    "owner_id": YOUR_USER_ID(DEVELOPER_MODE),
+    "censusToken": "PS2_CENSUS_API_TOKEN"
 }
