--- a/data/example_settings.json
+++ b/data/example_settings.json
@@ -1,4 +1,5 @@
 {
+    "inviteLink": "https://discordapp.com/oauth2/authorize?client_id={CLIENT_ID}&scope=bot&permissions={PERMISSIONS_INTEGER}",
     "token": "YOUR_DISCORD_TOKEN",
     "cogs": [
         "cogs.admincommands",
