--- a/ps2jaegeraccountbot.service
+++ b/ps2jaegeraccountbot.service
@@ -1,7 +1,12 @@
 [Unit]
 Description=The service for the PS2JaegerAccountBot
+After=network.target
 
 [Service]
 Type=simple
+User=asorr
 ExecStart=/usr/bin/python3 /home/asorr/PS2_Jaeger_Accountbot/src/PS2_Jaeger_Accountbot.py
 RestartSec=5
+
+[Install]
+WantedBy=multi-user.target
